--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 .project
 .classpath
-.settings/org.eclipse.core.resources.prefs
-.settings/org.eclipse.jdt.groovy.core.prefs
-.settings/org.grails.ide.eclipse.core.prefs
+.settings
 puppet/modules/mongodb
 puppet/modules/stdlib
 puppet/modules/apt
-.vagrant
 puppet/.librarian
 puppet/.tmp
+.vagrant
 target
 *.zip
 *.sha1
 plugin.xml
+web-app
